--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: lemonaise.dev@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A blog by Indigo Nolan
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://indigonolan.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://indigo.spot" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 plugins:
