Add 'thoughts' section to blog

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://indigo.spot" # the base hostname & protocol for your site, e.g. http://example.com
 
+collections:
+  stream:
+    output: false
 
 plugins:
   - jekyll-feed
