--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -95,6 +95,8 @@
     > The trick was simply to surrender
 
     Some things are inevitable. Fighting them can just make them worse. Prepare instead.
+    
+    Letting Go - Angie McMahon
 
 
 - date: 2025-07-14 13:14:12
@@ -138,6 +140,8 @@
     > If there's anything that you want / If there's anything I can do / Just call on me and I'll send it along / With love from me to you
 
     Friends are everything. Make connections if it's the only thing you do. The worst thing you can do is get a high-paying career, get incredibly fit, stay healthy, but have nobody to talk to, to confide in, who will help you when you need it.
+    
+    From Me To You - The Beatles
 
 
 
