--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -1,6 +1,47 @@
-- date: 2025-02-12 12:20:20
+- date: 2024-09-12 12:20:20
   content : |
     > it's the end / and i'm okay with it
+
+    ok with it - lyn lapid
+
+- date: 2024-12-18 18:19:20
+  content : |
+    > Just when you think you're in control / Just when you think you've got a hold 
+    >
+    > Just when you get on a roll / Here it goes, here it goes, here it goes again
+
+    When you put in so much effort into making things go well, and they go wrong anyway, it can be easy to feel defeated. 
+
+    Here It Goes Again - OK Go
+
+- date: 2024-12-22 02:02:02
+  content : |
+    > Comme une lueur de nuages s'envolant 
+
+    "Like a glimmer of clouds floating away". This lyric used to be my Discord status for over a year. I love Cortex.
+
+    Troupeau bleu - Cortex
+
+- date: 2025-01-04 18:01:02
+  content : |
+    > I'm free / to do what I want / any old time
+    > 
+    > I'm free / to be who I choose / any old time
+
+    A recurring theme here is that we have free will. But genuinely, you are free to do what you want and be who you choose. In a world where you can be anything, choose to be kind.
+
+    I'm Free - The Soup Dragons
+
+
+- date: 2025-02-10 19:19:29
+  content : |
+    > She asked me what I wanted / As if one ever really knew
+    >
+    > And I said "Dull domestication free from pressure to pursue / Another love, another touch, another tired conversation"
+
+    It is easy to get disillusioned with the constant cycle of life, losing things, searching for things, finding things, and then losing them again. You need to re-establish your priorities, what you actually want for yourself, before you dive into the world.
+
+    104 Degrees - Slaughter Beach, Dog
 
 - date: 2025-03-01 02:02:03
   content : |
@@ -13,6 +54,80 @@
     > My feelings still remain / My feelings still remain
 
     Souvenir - OMD
+
+- date: 2025-03-20 18:27:17
+  content : |
+    > This is the first day of my life / Swear I was born right in the doorway
+    > 
+    > Your's is the first face that I saw / I think I was blind before I met you
+
+    I can't remember where I read it, but someone said that if you did something as simple as going to the supermarket and experienced it genuinely and fully without the 'goggles of habit' you would simply go crazy with pure joy and overwhelming sensory experiences.
+
+    Nowadays, everything is taken for granted. We can have next-day, even same-day delivery, on millions of tiny trinkets that we don't really need. We can have milk, cheese, meat, anywhere in the country, fresh, within an hour of anywhere. Every day. It is worth sometimes taking off the goggles of habit and appreciating how far we've come.
+
+    First Day of My Life - Bright Eyes
+
+
+- date: 2025-03-23 01:04:06 
+  content : |
+    > I guess the best that I can do now / Is to pretend that I've done nothing wrong  / And to dream about a train / That's gonna take me back to where I belong
+
+    It is too easy to pretend we are infallible. We are not, nobody is. We all make mistakes, we all do things wrong. You have to own it and make sure you don't spiral.
+
+    Another Travelin' Song - Bright Eyes 
+
+
+- date: 2025-03-25 18:19:20
+  content : |
+    > There isn't much / That I feel I need / A solid soul / And the blood I bleed
+
+    At the end of the day, if you retain your humanity, everything will be fine. You can lose your job, your partner, your friends, move country, break both legs and arms, shave your head, fail all your exams, but if you still view yourself as a person capable of being redeemed, it will work out in the end.
+    My Girls - Animal Collective
+
+- date: 2025-03-27 17:19:02 
+  content : |
+    > Everything you is planned out in advance / and the stars push their dark wills down on you
+
+    You probably already know I don't agree with this worldview. Fate is not real, and we can bend destiny if we try hard enough and are strong enough to withstand the consequences.
+    
+    1:13 in this song is amazing, though.
+
+    Holy Fucking Shit: 40,000 - Have A Nice Life
+
+- date: 2025-04-24 12:04:03 
+  content : |
+    > Now I've been happy lately / Thinking about the good things to come 
+    > 
+    > I've been smiling lately / Dreaming about the world as one
+
+    Cat Stevens is a really interesting singer. He has had a truly [incredible and varied life](https://en.wikipedia.org/wiki/Cat_Stevens). This album is my favourite. 
+
+    Peace Train - Cat Stevens
+
+- date: 2025-04-25 02:05:03
+  content : |
+    > I let my music take me where my heart wants to go
+
+    This song reminds me of Ted Danson (Michael from the Good Place), I think it's the opening song to his new show A Man on the Inside.
+
+    The Wind - Cat Stevens
+
+- date: 2025-05-12 02:04:05 
+  content : |
+    > The feeling has gone, only you and I, it means nothing to me 
+
+    Apparently, Midge Ure didn't like the vibe of this song, and when he heard it in the studio, said 'this means nothing to me'. So, he sang that. And what a great song it made.
+
+    Vienna - Ultravox
+
+- date: 2025-05-13 01:02:04
+  content : |
+    > For what it's worth, it was worth all the while / It's something unpredictable / But in the end is right / I hope you had the time of your life
+
+    Everything ends eventually, especially the things you desperately don't want to end. It's important to remember this.
+
+    Good Riddance - Green Day
+
 
 - date: 2025-06-01 02:09:20 
   content : |
