--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -328,3 +328,19 @@
     It's important to maintain the impression that everything is going okay even when it's not. That isn't to say don't ask for help - your friends can help you through dark times and even save your life. But if you have the mindset that you *will* be okay and you *will* make it through, and there's no other feasible possiblity, then you've just greatly improved your chances. It's how Doctor Who survives all of their encounters - they simply *survive*, and work backwards from there.
 
     Dance And Sing - Bright Eyes 
+    
+    
+    
+- date: 2025-09-21 12:39:19
+  content: |
+    > Did you ever lie and listen to the rainbow / Did you ever own a homemade apple pie
+    >
+    > Did you ever see the funny side of losing / Did you ever sit right down and have a cry
+    >
+    > Did you ever take the time to help a neighbour 
+    >
+    > Just don't let the good life pass you by
+    
+    Life can go by quickly. Enjoy it while it lasts, be kind, be thoughtful, and don't waste it.
+    
+    Don't Let The Good Life Pass You By - Mama Cass
