--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -344,3 +344,21 @@
     Life can go by quickly. Enjoy it while it lasts, be kind, be thoughtful, and don't waste it.
     
     Don't Let The Good Life Pass You By - Mama Cass
+    
+    
+- date: 2025-09-24 01:40:32
+  content: |
+   > I'm tired of runnin' round lookin' for / Answers to questions I already know
+   >
+   > I could build me a castle with memories just to have somewhere to go
+   >
+   > Count the days and the nights that it / Takes to get back in the saddle again
+   
+   There is a strange calmness in desolation. 'Tired of running round looking for answers to questions I already know' speaks to what many people suffering from depression will know. The condition is internal, not external. The causes, the pressure, they are external, sure, but the condition and the state is self-imposed and internal. You can be acutely self-aware of this, and exhausted and frustrated with yourself, but continue because you simply have no other choice. 
+   
+   It is very hard to move past this and take responsibility, especially if you are surrounded by the same conditions which led you here in the first place. 
+   
+   Once you have been left with nothing, like we are in the song, it is somehow easier - with nothing to lose, there is everything to gain. Getting 'back in the saddle again' is not a triumphant victory over mental illness, nor a angry spiteful move, but a resigned necessity - there is simply nothing else that one can do other than get in the saddle again.   
+   
+   Clay Pigeons - Blaze Foley / John Prine
+   
