--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -362,3 +362,13 @@
    
    Clay Pigeons - Blaze Foley / John Prine
    
+
+- date: 2025-09-28 14:31:21
+  content: |
+    > Get through it, don't lose it
+    >
+    > You gotta choice and now you gotta choose it / Nobody sees what you see
+    > 
+    > Just do it / Just do it
+
+    Things are always easier with friends around you, I've said this a lot. But sometimes you won't have that luxury. You have to get through it. You have to persevere through difficulty, you have to recognise your power to make a choice without the support of everybody around you, trust your own vision even if you feel alone in it, and act decisively. Some opportunities don't come back. 
