--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -374,3 +374,23 @@
     Things are always easier with friends around you, I've said this a lot. But sometimes you won't have that luxury. You have to get through it. You have to persevere through difficulty, you have to recognise your power to make a choice without the support of everybody around you, trust your own vision even if you feel alone in it, and act decisively. Some opportunities don't come back. 
 
     Slipping Away - Sex Mex
+    
+- date: 2025-11-05 14:31:21
+  content: |
+    > It took a / long time to 
+    >
+    > Become the thing / I am to you
+    >
+    > And you won't / tear it apart
+    >
+    > Without a fight / without a heart
+    
+    Haven't put a song on here for a while, but I couldn't pass up the Indigo Girls.
+    
+    University work is taking its toll on me a little, but every time I think about how far I've come, it's all worth it.
+    
+    Haskell will grow on me, I'm Sure. I'll work through things. Just thought I'd have a little more free time, is all.
+    
+    Hopefully this page will become a little happier. I have some more songs I want to put on here, and I want to start putting normal things on here, like things I've bought that I want to recommend, not just emotional stuff., 
+    
+    Become You - Indigo Girls
