frankly Mr shankly

--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -394,3 +394,17 @@
     Hopefully this page will become a little happier. I have some more songs I want to put on here, and I want to start putting normal things on here, like things I've bought that I want to recommend, not just emotional stuff., 
     
     Become You - Indigo Girls
+    
+    
+     
+- date: 2025-11-10 14:31:21
+  content: |
+    > I want to live and I want to love
+
+    
+    Buy men-ü shaving cream. You can buy it [on their website here](https://men-u.com/product/shave-cream-100ml/). It's one of those products that I've bought more of simply to support the company. 
+    
+    I feel bad, because the cream lasts so long and it's so cheap that I feel I'm not giving enough money to the company to keep them afloat. So go on, go buy some. You won't regret it. I'm not sponsored, I'm not earning a penny from this (not like anybody reads this anyway), but me and my dad genuinely rave about this. Go on.
+    
+    Frankly Mr Shankly - The Smiths
+    
