--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -408,3 +408,17 @@
     
     Frankly Mr Shankly - The Smiths
     
+- date: 2025-11-27 15:31:21
+  content: |
+    > I can feel the earth begin to move
+    > 
+    > I hear my needle hit the groove
+    >
+    > And spiral through another day
+    >
+    > I hear my song begin to say
+    
+    I need to start thinking further into the future. If I have a vision of how the future is going to look, it makes it easier to work through any small problems I have in the short-term. I need to pass my exams, sure. I need to figure out every social situation, yes. And those add up. But if I have the end vision of a happy, older Indigo, nothing can get in my way. 
+
+    She Bangs the Drums - The Stone Roses
+    
