--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -422,3 +422,19 @@
 
     She Bangs the Drums - The Stone Roses
     
+
+
+- date: 2025-12-22 11:00:00
+  content : |
+    > I feel it in my fingers, I feel it in my toes
+    > 
+    > Christmas is all around me, and so, the feeling grows
+
+    Bill Nighy, you wonderful man. Love Actually is such a strange movie, it feels at least four hours long but they somehow fit it all into just about 2 hours. Nothing sticks but everything is quite uplifting, even though it's quite dated (there are *so* many fat jokes?? I guess that's the early 2000s for you...)
+
+
+    Love is everywhere in the world, and you do indeed just have to look for it - but I like to think if you approach things with love in your heart you'll get love piled back on top of you.
+
+    > If you look for it, I've got a sneaky feeling you'll find that love actually is all around - Hugh Grant
+
+    Christmas Is All Around - Bill Nighy
