--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -438,3 +438,15 @@
     > If you look for it, I've got a sneaky feeling you'll find that love actually is all around - Hugh Grant
 
     Christmas Is All Around - Bill Nighy
+
+
+
+- date: 2025-12-22 11:00:00
+  content : |
+    > You will find me waiting for the spring and summer / You will find me waiting for the fall
+    >
+    > You will find me if you want me in the garden / Unless it's pouring down with rain
+    
+    Things are looking up. Not in the world, not in the slightest. Venezuela, Greenland, Iran, nowhere is looking stable or comforting right now - but sometimes, you have to accept the privilege of living in relative stability, and say that things are looking up for yourself. And it's okay to say that. 
+
+    The Garden - Einsturzende Neubaten
