--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -450,3 +450,19 @@
     Things are looking up. Not in the world, not in the slightest. Venezuela, Greenland, Iran, nowhere is looking stable or comforting right now - but sometimes, you have to accept the privilege of living in relative stability, and say that things are looking up for yourself. And it's okay to say that. 
 
     The Garden - Einsturzende Neubaten
+
+
+- date: 2026-01-23 11:00:00
+  content : |
+    
+    My goals for 2026, to keep myself disciplined, are:
+
+    * Go to the gym, at least once per week
+
+    * Don't miss more than two lectures per week
+
+    * Eat healthier, make more of my own food and buy less sandwiches
+
+    * Learn Mandarin, or at least begin to learn Mandarin
+
+    I don't want to overload myself, so I'll stop there, but we'll see how that goes.
