Update language learning goals and remove Chinese learning blog post

--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -463,6 +463,6 @@
 
     * Eat healthier, make more of my own food and buy less sandwiches
 
-    * Learn Mandarin, or at least begin to learn Mandarin
+    * Keep learning languages! Probably German.
 
     I don't want to overload myself, so I'll stop there, but we'll see how that goes.
