--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -466,3 +466,25 @@
     * Keep learning languages! Probably German.
 
     I don't want to overload myself, so I'll stop there, but we'll see how that goes.
+    
+    
+    
+- date: 2026-02-12 11:00:00
+  content : |
+    > She'll carry on through it all
+    >
+    > She's a waterfall
+    
+    Three weeks on, let's see how my goals are doing. 
+    
+    * I have gone to the gym, at least once a week, twice even! I have my housemates to thank for this mostly. 
+    
+    * I *think* this one is true? I've probably missed about two a week. 
+    
+    * This has sort of happened! I've made a lot of sandwiches. There's a good bakery on a walk I do frequently so I sometimes get a sourdough loaf there which will last me a week of tuna and cheese melts. I have been going to Kokoro quite a lot though. It's just too good and tempting in the evenings. Got to work on reducing that. 
+    
+    * Not really happened unfortunately. I'll still do it, but as to be expected, I lost track of my "podcast a day" goal as I got busier and busier. I keep lying to myself and saying I don't have the time. Everybody has time to listen to a podcast. I'll get there. 
+    
+    Mostly, things are going good though! 
+    
+    Waterfall - The Stone Roses
