--- a/_data/fragments.yml
+++ b/_data/fragments.yml
@@ -477,14 +477,27 @@
     
     Three weeks on, let's see how my goals are doing. 
     
-    * I have gone to the gym, at least once a week, twice even! I have my housemates to thank for this mostly. 
+    * Gym: I have gone to the gym, at least once a week, twice even! I have my housemates to thank for this mostly. 
     
-    * I *think* this one is true? I've probably missed about two a week. 
+    * Lectures: I *think* this one is true? I've probably missed about two a week. 
     
-    * This has sort of happened! I've made a lot of sandwiches. There's a good bakery on a walk I do frequently so I sometimes get a sourdough loaf there which will last me a week of tuna and cheese melts. I have been going to Kokoro quite a lot though. It's just too good and tempting in the evenings. Got to work on reducing that. 
+    * Food: This has sort of happened! I've made a lot of sandwiches. There's a good bakery on a walk I do frequently so I sometimes get a sourdough loaf there which will last me a week of tuna and cheese melts. I have been going to Kokoro quite a lot though. It's just too good and tempting in the evenings. Got to work on reducing that. 
     
-    * Not really happened unfortunately. I'll still do it, but as to be expected, I lost track of my "podcast a day" goal as I got busier and busier. I keep lying to myself and saying I don't have the time. Everybody has time to listen to a podcast. I'll get there. 
+    * German: Not really happened unfortunately. I'll still keep trying, but as to be expected, I lost track of my "podcast a day" goal as I got busier and busier. I keep lying to myself and saying I don't have the time. Everybody has time to listen to a podcast. I'll get there. 
     
     Mostly, things are going good though! 
     
     Waterfall - The Stone Roses
+
+- date: 2026-02-14 12:00:00
+  content : |
+    > I'm stronger than the monster beneath your bed / Smarter than the tricks played on your heart
+    >
+    > We'll look at them together then we'll take them apart
+    >
+    > Adding up the total of a love that's true / Multiply life by the power of two
+
+    I can't wait to see what the future holds.
+
+    Power of Two - Indigo Girls
+    
